--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "immutability-helper": "^2.5.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
   "scripts": {
