--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.0",
+    "compose": "^0.1.2",
     "history": "^4.7.2",
     "immutability-helper": "^2.5.0",
     "material-ui": "^1.0.0-beta.20",
