--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "immutability-helper": "^2.5.0",
     "material-ui": "^1.0.0-beta.20",
     "material-ui-icons": "^1.0.0-beta.17",
+    "moment": "^2.19.3",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
+    "react-moment": "^0.6.8",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
